# nodeeditor

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md  nedeeditor_version.h.in  readme.txt.in
cmake/: nedeeditor_common_compilersettings.cmake  nodeeditor_add_example.cmake  nodeeditor_cmake_options.cmake  nodeeditor_common_qtsettings.cmake  nodeeditor_deployqt.cmake  nodeeditor_helper_functions.cmake  nodeeditor_print_variables_table.cmake
examples/: CMakeLists.txt
examples/calculator/: AdditionModel.h  CMakeLists.txt  Converters.cpp  Converters.h  DecimalData.h  DivisionModel.h  IntegerData.h  MathOperationDataModel.h  ModuloModel.cpp  ModuloModel.h  MultiplicationModel.h  NumberDisplayDataModel.h  NumberSourceDataModel.h  SubtractionModel.h  main.cpp
examples/connection_colors/: CMakeLists.txt  main.cpp  models.h
examples/example/: CMakeLists.txt  TextData.h  TextDisplayDataModel.cpp  TextDisplayDataModel.h  TextSourceDataModel.cpp  TextSourceDataModel.h  main.cpp
examples/images/: CMakeLists.txt  ImageLoaderModel.cpp  ImageLoaderModel.h  ImageShowModel.cpp  ImageShowModel.h  PixmapData.h  main.cpp
examples/styles/: CMakeLists.txt  main.cpp  models.cpp  models.h
lib/: CMakeLists.txt  nedeeditor_version.h.in
lib/node_common/: CMakeLists.txt  Connection.cpp  Connection.h  ConnectionGraphicsObject.cpp  ConnectionPainter.cpp  ConnectionStyle  ConnectionStyle.cpp  DataModelRegistry  DataModelRegistry.h  Export.h  FlowScene.cpp  FlowScene.h  FlowView  FlowView.cpp  FlowView.h  FlowViewStyle  LibTarget.cmake.in  Node.cpp  Node.h  NodeConnectionInteraction.cpp  NodeConnectionInteraction.h  NodeData.h  NodeDataModel  NodeDataModel.h  NodeGeometry  NodeGeometry.cpp  NodeGeometry.h  NodeGraphicsObject.cpp  NodeGraphicsObject.h  NodePainter.cpp  NodePainterDelegate  NodeState  NodeStyle  Properties.cpp  StyleCollection  TypeConverter  TypeConverter.h  nodeeditor_imexport.h
tests/: CMakeLists.txt  StubNodeDataModel.h  TestDataModelRegistry.cpp  TestDragging.cpp  TestFlowScene.cpp  TestNodeGraphicsObject.cpp
