nodeeditor_print_variables_table(
	TITLE
		"NodeEditor Build Information"
	VARIABLES
		PROJECT_VERSION
		CMAKE_BUILD_TYPE
		CMAKE_VERSION
		CMAKE_GENERATOR
		CMAKE_CXX_COMPILER_ID
		CMAKE_CXX_COMPILER_VERSION
		CMAKE_CXX_PLATFORM_ID
		CMAKE_CXX_STANDARD
		CMAKE_CXX_STANDARD_REQUIRED
		CMAKE_CXX_LIBRARY_ARCHITECTURE
		CMAKE_LIBRARY_ARCHITECTURE
		CMAKE_SYSTEM_NAME
		CMAKE_SYSTEM_PROCESSOR
		QT_VERSION
		QT_DIR
		CMAKE_INSTALL_PREFIX
)

configure_file(
	${CMAKE_CURRENT_LIST_DIR}/nedeeditor_version.h.in
	${CMAKE_CURRENT_BINARY_DIR}/nedeeditor_version.h
)

include_directories(.)

add_subdirectory(node_common)
